fluxcd/apps/overlays/production/photoprism/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  annotations:
    lbipam.cilium.io/ips: "172.22.30.123"
    lbipam.cilium.io/sharing-key: "song-of-storms"
