fluxcd/apps/overlays/production/photoprism/service-photoprism-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  labels:
    policy.prplanit.com/ingress: "true"
